updated python whirlwind

--- a/python_intro_whirlwind.ipynb
+++ b/python_intro_whirlwind.ipynb
@@ -13,34 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
+      "<module 'this' from 'C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.11_3.11.1520.0_x64__qbz5n2kfra8p0\\\\Lib\\\\this.py'>\n"
      ]
     }
    ],
@@ -82,11 +62,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'bool'>\n",
+      "<class 'str'>\n",
+      "<class 'float'>\n",
+      "<class 'list'>\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# do stuff"
+    "# do stuff\n",
+    "print(type(3))\n",
+    "print(type(False))\n",
+    "print(type(\"asdasd\"))\n",
+    "print(type(1.0))\n",
+    "\n",
+    "# dates: see datetime \"built-in\" library\n",
+    "\n",
+    "x = [1,2,3,4,5,6]\n",
+    "print(type(x))\n",
+    "\n",
+    "x = {\"a\": 1, \"b\": 2}\n",
+    "print(type(x))"
    ]
   },
   {
@@ -125,9 +130,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mod__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__rmod__', '__rmul__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'capitalize', 'casefold', 'center', 'count', 'encode', 'endswith', 'expandtabs', 'find', 'format', 'format_map', 'index', 'isalnum', 'isalpha', 'isascii', 'isdecimal', 'isdigit', 'isidentifier', 'islower', 'isnumeric', 'isprintable', 'isspace', 'istitle', 'isupper', 'join', 'ljust', 'lower', 'lstrip', 'maketrans', 'partition', 'removeprefix', 'removesuffix', 'replace', 'rfind', 'rindex', 'rjust', 'rpartition', 'rsplit', 'rstrip', 'split', 'splitlines', 'startswith', 'strip', 'swapcase', 'title', 'translate', 'upper', 'zfill']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"We're 2 and 0 but it feels like we could have done better; I ofc never doubted us..\""
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Explore methods/attributes that some of our above data types have\n",
     "\n",
@@ -171,12 +194,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "9\n",
+      "4\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# Try out any you don't know\n",
-    "# and write a note of when it would be nice to use"
+    "# and write a note of when it would be nice to use\n",
+    "print(10//4)\n",
+    "print(4//2)\n",
+    "\n",
+    "print(3**2)\n",
+    "\n",
+    "x=3\n",
+    "x+=1\n",
+    "print(x)\n",
+    "\n",
+    "x-=1\n",
+    "print(x)"
    ]
   },
   {
@@ -201,11 +247,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# do stuff"
+    "# do stuff\n",
+    "ball_x = 0\n",
+    "ball_y = 0\n",
+    "ball_radius = 100\n",
+    "\n",
+    "mouse_x = 0\n",
+    "mouse_y = 0\n",
+    "\n",
+    "import math as math\n",
+    "# minkowski -> manhattan (L1) & euclidean (L2) & L3\n",
+    "sq_distance = ((ball_x - mouse_x)**2 + (ball_y - mouse_y)**2)\n",
+    "distance = math.sqrt(sq_distance)\n",
+    "\n",
+    "is_clicked = distance < ball_radius"
    ]
   },
   {
@@ -217,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,9 +336,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48.00533333333333\n",
+      "50.0214\n"
+     ]
+    }
+   ],
    "source": [
     "# Solve without loading any additional libraries outside of this\n",
     "import statistics\n",
@@ -270,8 +356,23 @@
     "# statistics.median([1, 2, 3, 4])\n",
     "# statistics.mean([1, 2, 3, 4])\n",
     "\n",
+    "print(statistics.mean(control))\n",
+    "print(statistics.mean(treatment))\n",
+    "\n",
     "# Use autocomplete (`statistics.`) or `dir(statistics)` to find more functions\n",
     "# you might want to use"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "compare control v treatment\n",
+    "\n",
+    "mean of each\n",
+    "take difference of means\n",
+    "multiple by expected transactions\n",
+    "do t-test to make a confidence interval of the difference of means"
    ]
   },
   {
